--- a/style/main.css
+++ b/style/main.css
@@ -117,49 +117,61 @@ header .header-img {
 
 #contact-us .contact-info h1 {
   text-align: center;
-  padding-right: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   padding-top: 40px;
+}
+
+#contact-us .contact-info hr {
+  width: 100px;
+  text-align: center;
+  padding-bottom: 2px;
+  background-color: rgb(196, 0, 0);
+  margin-bottom: 50px;
 }
 
 #contact-us .contact-info .row {
   background-color: rgb(196, 0, 0);
   text-align: right;
-  width: fit-content;
+  width: 100%;
+  height: fit-content;
   margin: 0 auto;
-  padding: 60px;
-  z-index: 999;
-  position: absolute;
-  margin: 30px 0px 0px 50px;
+  padding: 50px 40px 50px 40px;
+  margin-bottom: 20px;
+  /* z-index: 999; */
+  /*position: absolute; */
 }
 
 #contact-us .contact-info .row .top {
   height: 180px;
 }
+#contact-us .contact-info .row .bottom {
+  margin-top: 60px;
+}
 
 #contact-us .contact-info .row h2,
-#contact-us .contact-info .row h5,
 #contact-us .contact-info .row h3,
 #contact-us .contact-info .row span {
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
+#contact-us .contact-info .row h5,
 #contact-us .contact-info .row h4 {
   color: rgb(100, 0, 0);
+  margin-top: 20px;
 }
 
 #contact-us .contact-info .row .dash {
-  margin-top: 70px;
+  margin-top: 40px;
   float: right;
   background-color: white;
   width: 100px;
   height: 5px;
 }
 
-#contact-us iframe {
-  padding-top: 300px;
-  margin: 0px 0px 0px 55px;
+#contact-us .map iframe {
+  width: 100%;
+  height: 500px;
 }
 
 @media (min-width: 769px) and (max-width: 1199px) {
@@ -227,5 +239,17 @@ header .header-img {
   header .header-img {
     background-size: contain;
     height: 200px;
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  #contact-us .contact-info .row .bottom {
+    margin-bottom: 40px;
+  }
+}
+
+@media only screen and (max-width: 424px) {
+  #contact-us .contact-info .row .bottom {
+    margin-top: 140px;
   }
 }
