--- a/style/main.css
+++ b/style/main.css
@@ -54,13 +54,14 @@ header .header-img {
 }
 
 #packages .slick-slide {
-  height: 1420px;
+  height: 1450px;
   margin: 0 10px;
 }
 
 #packages .card {
-  border: 2px solid rgb(196, 0, 0);
-  box-shadow: 0px 4px 2px 2px rgb(146, 146, 146);
+  background: #fff;
+  border: 4px solid #d81f27;
+  filter: drop-shadow(1px 2px 3px rgba(29, 29, 27, 0.15));
 }
 
 #packages .card h4 {
@@ -77,6 +78,7 @@ header .header-img {
   text-align: center;
   color: rgb(185, 185, 185);
   font-size: 16px;
+  margin-bottom: 8px;
   font-family: myFontLight;
 }
 
