--- a/style/slick.css
+++ b/style/slick.css
@@ -110,6 +110,8 @@
   font-weight: 600;
   padding: 5px 10px 3px 10px;
   text-align: center;
+  background: #fff;
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.16));
 }
 .slick-dots {
   list-style: none;
