--- a/style/main.css
+++ b/style/main.css
@@ -54,14 +54,14 @@ header .header-img {
 }
 
 #packages .slick-slide {
-  height: 1450px;
+  height: 1470px;
   margin: 0 10px;
 }
 
 #packages .card {
   background: #fff;
   border: 4px solid #d81f27;
-  filter: drop-shadow(1px 2px 3px rgba(29, 29, 27, 0.15));
+  /* filter: drop-shadow(1px 2px 10px rgba(29, 29, 27, 0.15)); */
 }
 
 #packages .card h4 {
