--- a/style/slick.css
+++ b/style/slick.css
@@ -100,10 +100,10 @@
 }
 .slick-arrow {
   background-color: white;
-  border-radius: 50%;
+  border-radius: 100%;
   width: fit-content;
   height: fit-content;
-  border: 1px solid rgb(163, 163, 163);
+  border: 0px;
   margin: auto 0;
   color: rgb(196, 0, 0);
   font-size: 24px;
@@ -111,7 +111,7 @@
   padding: 5px 10px 3px 10px;
   text-align: center;
   background: #fff;
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.16));
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.12));
 }
 .slick-dots {
   list-style: none;
